Added presenter to OLS, started analysis

--- a/OlveczkyLabSignatures/AndroidManifest.xml
+++ b/OlveczkyLabSignatures/AndroidManifest.xml
@@ -3,13 +3,10 @@
     package="com.lab.olveczkylabsignatures"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-    <uses-permission 
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    
-    <uses-permission 
-        android:name="android.permission.READ_EXTERNAL_STORAGE" />    
-    
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
@@ -27,6 +24,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.lab.olveczkylabsignatures.PresentActivity"
+            android:label="@string/title_activity_present" >
+        </activity>
+        <activity
+            android:name="com.lab.olveczkylabsignatures.PresentorActivity"
+            android:label="@string/title_activity_presentor" >
+        </activity>
+        <activity
+            android:name="com.lab.olveczkylabsignatures.PresenterActivity"
+            android:label="@string/title_activity_presenter" >
+        </activity>
+        <activity
+            android:name="com.lab.olveczkylabsignatures.AnalysisActivity"
+            android:label="@string/title_activity_analysis" >
         </activity>
     </application>
 
